<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.businesscard.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/companyName"
            android:textSize="@dimen/bigFont"
            android:padding="@dimen/standardPadding"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorAccent"/>
        <ImageView
            android:padding="@dimen/halfPadding"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/wordcloud1"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/halfPadding">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/openHrs"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="@dimen/defaultFont"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/whatWeDo"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="@dimen/defaultFont"
                android:textColor="@color/colorPrimary"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webOn"
            android:fontFamily="sans-serif-smallcaps"
            android:autoLink="web"
            android:textSize="@dimen/defaultFont"
            android:textColor="@color/colorAdded1"
            android:textColorLink="@color/colorAdded1"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/catFace"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/imageSize"
                android:layout_height="@dimen/imageSize"
                android:src="@drawable/cat1"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:cropToPadding="false"/>
            <TextView
                android:id="@+id/texNrOne"
                android:paddingLeft="@dimen/halfPadding"
                android:paddingTop="@dimen/halfPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textLow1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/defaultFont"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/textNrTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultFont"
                android:text="@string/textLow2"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorAccent"
                android:paddingBottom="@dimen/halfPadding"
                android:paddingLeft="@dimen/halfPadding"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/textNrThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultFont"
                android:text="@string/textLow3"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:paddingTop="@dimen/halfPadding"
                android:paddingRight="@dimen/halfPadding"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/textNrFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defaultFont"
                android:text="@string/textLow4"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorAdded1"
                android:paddingBottom="@dimen/halfPadding"
                android:paddingRight="@dimen/halfPadding"
                android:visibility="invisible"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
